--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+*{
+    /* outline: 1px solid red; */
+}
 body{
     background-color: #141414;
     color: white;
@@ -8,54 +11,20 @@ body{
     animation: test ease .8s;
 }
 html{scroll-behavior:smooth}
-.title{
-    margin-bottom: 12px;
-    text-align: left;
-    line-height: 0.3;
-    font-size: 8em;
-}
-.orange{
-    color: rgb(243, 91, 74);
-}
-header{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+nav{
     width: 100%;
-    max-width: 1000px;
-}
-.titletext{
-    padding-top: 30px;
-    padding-left: 10px;
-    font-size: 1.6em;
-    line-height: 2;
-}
-header a{
-    padding: 17px;
-    border-radius: 5px;
-    border: solid 5px rgb(243, 91, 74);
-    margin: 15px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 1.2em;
-    transition: ease 0.3s;
-    box-shadow: rgb(196, 68, 54) 3px 4px 0px;
-    opacity: 0.8;
-}
-header a:hover{
-    margin: 30px;
-    box-shadow: rgb(196, 68, 54) 10px 11px 0px;
-    opacity: 1;
+    display: flex;
+    justify-content: flex-end;
 }
 nav ul,li{
-    display: inline;
+    display: inline-flex;
     font-size: 1.1em;
-    position: relative;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    flex-direction: row-reverse;
 }
 li a{
-    position: relative;
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -69,71 +38,90 @@ li a{
     margin: 20px
 }
 li a:hover{
-    background-color: rgb(243, 91, 74);
+    background-color: #6732d8;
 }
-main{
-    position: absolute;
-    top: 100%;
-    width: 99%;
+.hero{
+    width: 75%;
+    height: 600px;
+    margin-left: 150px;
+    padding-top: 150px;
+    /* outline: 1px solid green; */
 }
-main h1{
+.title{
+    margin-bottom: 12px;
+    padding-top: 50px;
+    line-height: 0.8;
+    font-size: 6em;
+}
+.title h1{
+    text-align: left;
+    margin: 0;
+}
+.purp{
+    color: #6732d8;
+}
+.desc{
+    margin-top: 0;
+    margin-bottom: 40px;
+    padding: 5px 5px 5px 15px;
+    font-size: 1.6em;
+    line-height: 0.2;
+}
+.hero a{
+    padding: 17px;
+    border-radius: 5px;
+    border: solid 5px #6732d8;
+    margin: 15px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2em;
+    transition: ease 0.3s;
+    box-shadow: #340e85 3px 4px 0px;
+    opacity: 0.8;
+}
+.hero a:hover{
+    margin: 30px;
+    box-shadow: #340e85 10px 11px 0px;
+    opacity: 1;
+}
+#projects{
     position: relative;
     font-size: 4em;
     margin: auto;
+    margin-bottom: 50px;
     text-align: center;
-}
-section{
-    width: 450px;
-    height: 450px;
-    display: inline-block;
-    margin: 40px;
-    border-radius: 20px;
 }
 .projects{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    margin: 80px;
+    display: inline-flex;
+    gap: 100px;
+    flex-wrap: wrap;
+    padding-bottom: 50px;
 }
-.flip {
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    perspective: 1600px;
-  }
-  .flip-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.5s;
-    transform-style: preserve-3d;
-  }
-  .flip:hover .flip-inner {
-    transform: rotateX(-180deg);
-  }
-  .flip-front, .flip-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-  .flip-front {
-    border-radius: 20px;
-    background-color: #242424;
+.card{
+    background-color: rgb(32, 32, 32);
     color: white;
     font-size: 2em;
-  }
-  .flip-back {
-    background-color: rgb(46, 46, 46);
-    color: white;
-    transform: rotateX(-180deg);
-    font-size: 2em;
-    line-height: 0.2;
+    line-height: 0.75;
+    border: 3px solid #5a5a5a;
     border-radius: 20px;
     cursor: pointer;
-  }
+    width: 400px;
+    height: 500px;
+}
+.card p{
+    line-height: 1;
+    margin: 10px;
+}
+.card:hover{
+    border: 3px solid #6732d8;
+}
 .projectspan{
-    color: rgb(243, 91, 74);
+    color: #6732d8;
 }
 .stiwek{
     background-image: url("../img/icon3.png");
@@ -148,11 +136,12 @@ section{
     background-size: 50%;
 }
 body footer{
-    position: absolute;
-    bottom: -100%;
-    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(14, 14, 14);
     width: 100%;
+    height: 50px;
     text-align: center;
     color: rgb(66, 66, 66);
 }
