--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@ li a{
     padding: 25px 50px 25px 50px;
     background-color: #363636;
     border-radius: 10px;
-    transition: ease 0.15s;
+    transition: background-color .15s ease, box-shadow .15s ease;
     line-height: 20px;
     margin: 20px;
-    box-shadow: #340e85 0px 0px 0px;
+    box-shadow: #340e8500 0px 0px 0px;
 }
 li a:hover{
     background-color: #6732d8;
@@ -79,7 +79,7 @@ li a:hover{
     color: white;
     font-weight: bold;
     font-size: 1.2em;
-    transition: ease 0.15s;
+    transition: box-shadow .15s ease, opacity .15s ease;
     box-shadow: #340e85 3px 4px 0px;
     opacity: 0.8;
 }
@@ -88,7 +88,6 @@ li a:hover{
     opacity: 1;
 }
 #projects{
-    position: relative;
     font-size: 4em;
     margin: auto;
     margin-bottom: 100px;
@@ -114,7 +113,7 @@ li a:hover{
     cursor: pointer;
     width: 400px;
     height: 500px;
-    transition: ease .15s;
+    transition: border .15s ease, transform .15s ease;
 }
 .card p{
     line-height: 1;
@@ -126,6 +125,9 @@ li a:hover{
 .card:hover{
     border: 3px solid #6732d8;
     transform: scale(101%);
+}
+.hide{
+    display: none;
 }
 .projectspan{
     color: #6732d8;
@@ -148,5 +150,97 @@ body footer{
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+@media (max-width: 1200px) {
+    nav {
+        justify-content: center;
+    }
+    li a {
+        margin: 10px;
+    }
+    .hero {
+        width: 80%;
+        height: 600px;
+    }
+    .hero a {
+        padding: 15px 0px 15px 0px;
+        display: inline-flex;
+        width: 20%;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 5px;
+        font-size: 2vw;
+        border-width: .75vw;
+    }
+    .title {
+        font-size: 8vw; 
+    }
+    .desc{
+        font-size: 2.5vw;
+    }
+    #projects{
+        font-size: 6vw;
+        margin-bottom: 50px;
+    }
+}
+@media (max-width: 550px) {
+    li a {
+        width: 100%;
+        text-align: center;
+        margin: 0px;
+        padding: 25px 0px 25px 0px;
+        border-radius: 0;
+        box-shadow: none;
+    }
+    li a:hover{
+        background-color: #6732d8;
+        box-shadow: none;
+    }
+    nav ul,li {
+        width: 100%;
+    }
+    .hero {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        height: auto;
+    }
+    .title {
+        font-size: 8vw; 
+    }
+    .desc{
+        font-size: 3vw;
+    }
+    .hero a {
+        padding: 15px 0px 15px 0px;
+        display: flex;
+        width: 100%;
+        margin: auto;
+        border-radius: 0px;
+        border-width: 5px;
+        box-shadow: none;
+        font-size: 1em;
+    }
+    .hero a:hover{
+        box-shadow: none;
+        opacity: 1;
+        background-color: #6732d8;
+    }
+    #projects{
+        font-size: 6vw;
+        margin-bottom: 50px;
+    }
+    .projects{
+        gap: 50px;
+        padding-bottom: 50px;
+    }
+    .card{
+        font-size: 6vw;
+        border: 3px solid #5a5a5a;
+        border-radius: 20px;
+        cursor: pointer;
+        width: 80vw;
+        height: 100vw;
+        transition: ease .15s;
     }
 }
