--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     font-family: Roboto;
     min-height: 100vh;
     margin: auto;
-    animation: test ease .5s;
+    animation: fadeIn ease .5s;
 }
 html{scroll-behavior:smooth}
 nav{
@@ -51,7 +51,7 @@ li a:hover{
 .title{
     margin-bottom: 12px;
     padding-top: 50px;
-    line-height: 0.8;
+    line-height: 0.9;
     font-size: 6em;
     font-family: 'Sora', sans-serif;
 }
@@ -101,25 +101,46 @@ li a:hover{
     justify-content: center;
     text-align: center;
     display: inline-flex;
-    gap: 100px;
+    gap: 80px;
     flex-wrap: wrap;
     padding-bottom: 50px;
 }
 .card{
-    background-color: rgb(32, 32, 32);
+    background-color: #202020;
     color: white;
-    font-size: 2em;
+    font-size: 2.5em;
     line-height: 0.75;
     border: 3px solid #5a5a5a;
     border-radius: 20px;
-    cursor: pointer;
-    width: 400px;
+    width: 420px;
     height: 500px;
-    transition: border .15s ease, transform .15s ease;
+    transition: border .15s ease, transform .1s ease;
+    font-family: monospace;
+}
+.card h2{
+    background-color: #5a5a5a;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 20px;
+    transition: background-color .15s ease;
 }
 .card p{
     line-height: 1;
     margin: 10px;
+}
+.card a{
+    color: #ffffff;
+    background-color: #5a5a5a;
+    padding: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color .15s ease;
+    line-height: 2;
+}
+.card:hover a:hover{
+    background-color: #202020;
+    color: #6732d8;
 }
 .card img{
     width: 35%;
@@ -128,13 +149,16 @@ li a:hover{
     border: 3px solid #6732d8;
     transform: scale(101%);
 }
+.card:hover h2, .card:hover a{
+    background-color: #6732d8;
+}
 .hide{
     display: none;
 }
 .projectspan{
     color: #6732d8;
 }
-body footer{
+footer{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -142,9 +166,13 @@ body footer{
     width: 100%;
     height: 50px;
     text-align: center;
-    color: rgb(66, 66, 66);
+    color: rgb(143, 143, 143);
 }
-@keyframes test{
+.heart{
+    animation: .75s ease 0s infinite alternate heart;
+    color: #6732d8;
+}
+@keyframes fadeIn{
     from {
         opacity: 0;
         transform: translateY(-50px);
@@ -152,6 +180,14 @@ body footer{
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+@keyframes heart{
+    from {
+        color: #6732d8;
+    }
+    to {
+        color: #8f8f8f;
     }
 }
 @media (max-width: 1200px) {
