--- a/css/style.css
+++ b/css/style.css
@@ -1,284 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
-*{
-    /* outline: 1px solid red; */
-}
-body{
-    background-image: url('../img/background.png');
-    color: white;
-    font-family: Roboto;
-    min-height: 100vh;
-    margin: auto;
-    animation: fadeIn ease .5s;
-}
-html{scroll-behavior:smooth}
-nav{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-}
-nav ul,li{
-    display: inline-flex;
-    font-size: 1.1em;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-}
-li a{
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    float: right;
-    padding: 25px 50px 25px 50px;
-    background-color: #363636;
-    border-radius: 10px;
-    transition: background-color .15s ease, box-shadow .15s ease;
-    line-height: 20px;
-    margin: 20px;
-    box-shadow: #340e8500 0px 0px 0px;
-}
-li a:hover{
-    background-color: #6732d8;
-    box-shadow: #340e85 10px 11px 0px;
-}
-.hero{
-    width: 75%;
-    height: 750px;
-    margin: auto;
-    padding-top: 150px;
-    /* outline: 1px solid green; */
-}
-.title{
-    margin-bottom: 12px;
-    padding-top: 50px;
-    line-height: 0.9;
-    font-size: 6em;
-    font-family: 'Sora', sans-serif;
-}
-.title h1{
-    text-align: left;
-    margin: 0;
-}
-.purp{
-    color: #6732d8;
-}
-.desc{
-    margin-top: 0;
-    margin-bottom: 40px;
-    font-size: 1.6em;
-    color: rgb(235, 235, 235);
-}
-.desc p{
-    margin: 5px;
-}
-.hero a{
-    padding: 15px 35px 15px 35px;
-    border-radius: 5px;
-    border: solid 5px #6732d8;
-    margin: 15px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 1.2em;
-    transition: box-shadow .15s ease, opacity .15s ease;
-    box-shadow: #340e85 3px 4px 0px;
-    opacity: 0.8;
-}
-.hero a:hover{
-    box-shadow: #340e85 10px 11px 0px;
-    opacity: 1;
-}
-#projects{
-    font-size: 4em;
-    margin: auto;
-    margin-bottom: 100px;
-    text-align: center;
-    font-family: 'Sora', sans-serif;
-}
-.projects{
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    display: inline-flex;
-    gap: 80px;
-    flex-wrap: wrap;
-    padding-bottom: 50px;
-}
-.card{
-    background-color: #202020;
-    color: white;
-    font-size: 2.5em;
-    line-height: 0.75;
-    border: 3px solid #5a5a5a;
-    border-radius: 20px;
-    width: 420px;
-    height: 500px;
-    transition: border .15s ease, transform .1s ease;
-    font-family: monospace;
-}
-.card h2{
-    background-color: #5a5a5a;
-    border-radius: 20px;
-    padding: 20px;
-    margin: 20px;
-    transition: background-color .15s ease;
-}
-.card p{
-    line-height: 1;
-    margin: 10px;
-}
-.card a{
-    color: #ffffff;
-    background-color: #5a5a5a;
-    padding: 10px;
-    border-radius: 10px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background-color .15s ease;
-    line-height: 2;
-}
-.card:hover a:hover{
-    background-color: #202020;
-    color: #6732d8;
-}
-.card img{
-    width: 35%;
-}
-.card:hover{
-    border: 3px solid #6732d8;
-    transform: scale(101%);
-}
-.card:hover h2, .card:hover a{
-    background-color: #6732d8;
-}
-.hide{
-    display: none;
-}
-.projectspan{
-    color: #6732d8;
-}
-footer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(14, 14, 14);
-    width: 100%;
-    height: 50px;
-    text-align: center;
-    color: rgb(143, 143, 143);
-}
-.heart{
-    animation: .75s ease 0s infinite alternate heart;
-    color: #6732d8;
-}
-@keyframes fadeIn{
-    from {
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-@keyframes heart{
-    from {
-        color: #6732d8;
-    }
-    to {
-        color: #8f8f8f;
-    }
-}
-@media (max-width: 1200px) {
-    nav {
-        justify-content: center;
-    }
-    li a {
-        margin: 10px;
-    }
-    .hero {
-        width: 80%;
-        height: 600px;
-    }
-    .hero a {
-        padding: 15px 0px 15px 0px;
-        display: inline-flex;
-        width: 20%;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 5px;
-        font-size: 2vw;
-        border-width: .75vw;
-    }
-    .title {
-        font-size: 8vw; 
-    }
-    .desc{
-        font-size: 2.5vw;
-    }
-    #projects{
-        font-size: 6vw;
-        margin-bottom: 50px;
-    }
-}
-@media (max-width: 550px) {
-    li a {
-        width: 100%;
-        text-align: center;
-        margin: 0px;
-        padding: 25px 0px 25px 0px;
-        border-radius: 0;
-        box-shadow: none;
-    }
-    li a:hover{
-        background-color: #6732d8;
-        box-shadow: none;
-    }
-    nav ul,li {
-        width: 100%;
-    }
-    .hero {
-        padding-top: 50px;
-        padding-bottom: 50px;
-        height: auto;
-    }
-    .title {
-        font-size: 8vw; 
-    }
-    .desc{
-        font-size: 3vw;
-    }
-    .hero a {
-        padding: 15px 0px 15px 0px;
-        display: flex;
-        width: 100%;
-        margin: auto;
-        border-radius: 0px;
-        border-width: 5px;
-        box-shadow: none;
-        font-size: 1em;
-    }
-    .hero a:hover{
-        box-shadow: none;
-        opacity: 1;
-        background-color: #6732d8;
-    }
-    #projects{
-        font-size: 6vw;
-        margin-bottom: 50px;
-    }
-    .projects{
-        gap: 50px;
-        padding-bottom: 50px;
-    }
-    .card{
-        font-size: 6vw;
-        border: 3px solid #5a5a5a;
-        border-radius: 20px;
-        cursor: pointer;
-        width: 80vw;
-        height: 100vw;
-        transition: ease .15s;
-    }
-}
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap);body,li a{color:#fff}.hero,body{margin:auto}.hero a:hover,li a:hover{box-shadow:#340e85 10px 11px 0}#projects,.title{font-family:Sora,sans-serif}.card a,.hero a,li a{text-decoration:none;font-weight:700}.card:hover a,.card:hover h2,li a:hover{background-color:#6732d8}footer,nav{display:flex}body{background-image:url('../img/background.png');font-family:Roboto;min-height:100vh;animation:.5s fadeIn}html{scroll-behavior:smooth}nav{width:100%;justify-content:flex-end}.projects,li,nav ul{display:inline-flex}li,nav ul{font-size:1.1em;list-style:none;margin:0;padding:0;flex-direction:row}li a{float:right;padding:25px 50px;background-color:#363636;border-radius:10px;transition:background-color .15s,box-shadow .15s;line-height:20px;margin:20px;box-shadow:#340e8500 0 0 0}.hero{width:75%;height:750px;padding-top:150px}.projects,footer{width:100%;text-align:center}.title{margin-bottom:12px;padding-top:50px;line-height:.9;font-size:6em}.title h1{text-align:left;margin:0}.projectspan,.purp{color:#6732d8}.desc{margin-top:0;margin-bottom:40px;font-size:1.6em;color:#ebebeb}.card,.card a,.hero a{color:#fff}.desc p{margin:5px}.hero a{padding:15px 35px;border-radius:5px;border:5px solid #6732d8;margin:15px;font-size:1.2em;transition:box-shadow .15s,opacity .15s;box-shadow:#340e85 3px 4px 0;opacity:.8}.card a,.card h2{background-color:#5a5a5a;transition:background-color .15s}.hero a:hover{opacity:1}#projects{font-size:4em;margin:auto auto 100px;text-align:center}.projects{align-items:center;justify-content:center;gap:80px;flex-wrap:wrap;padding-bottom:50px}.card{background-color:#202020;font-size:2.5em;line-height:.75;border:3px solid #5a5a5a;border-radius:20px;width:420px;height:500px;transition:border .15s,transform .1s;font-family:monospace}.card h2{border-radius:20px;padding:20px;margin:20px}.card p{line-height:1;margin:10px}.card a{padding:10px;border-radius:10px;line-height:2}.card:hover a:hover{background-color:#202020;color:#6732d8}.card img{width:35%}.card:hover{border:3px solid #6732d8;transform:scale(101%)}.hide{display:none}footer{align-items:center;justify-content:center;background-color:#0e0e0e;height:50px;color:#8f8f8f}.heart{animation:.75s infinite alternate heart;color:#6732d8}@keyframes fadeIn{from{opacity:0;transform:translateY(-50px)}to{opacity:1;transform:translateY(0)}}@keyframes heart{from{color:#6732d8}to{color:#8f8f8f}}@media (max-width:1200px){nav{justify-content:center}li a{margin:10px}.hero{width:80%;height:600px}.hero a{padding:15px 0;display:inline-flex;width:20%;flex-wrap:wrap;justify-content:center;margin:5px;font-size:2vw;border-width:.75vw}.title{font-size:8vw}.desc{font-size:2.5vw}#projects{font-size:6vw;margin-bottom:50px}}@media (max-width:550px){.hero a,li a{width:100%;border-radius:0}.hero a:hover,li a:hover{box-shadow:none;background-color:#6732d8}.hero,.projects{padding-bottom:50px}li a{text-align:center;margin:0;padding:25px 0;box-shadow:none}li,nav ul{width:100%}.hero{padding-top:50px;height:auto}.title{font-size:8vw}.desc{font-size:3vw}.hero a{padding:15px 0;display:flex;margin:auto;border-width:5px;box-shadow:none;font-size:1em}.hero a:hover{opacity:1}#projects{font-size:6vw;margin-bottom:50px}.projects{gap:50px}.card{font-size:6vw;border:3px solid #5a5a5a;border-radius:20px;cursor:pointer;width:80vw;height:100vw;transition:.15s}}
