--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ HERO SECTION
 .check::before{
     content: "##";
     color: transparent;
-    background-image: url('../img/check.png');
+    background-image: url('../img/check.svg');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
